# AsteroidsClone

./: CMakeLists.txt  main.cpp  object.cpp  object.h  timer.h  window.h
src/: CMakeLists.txt  global.h  main.cpp  object.cpp  object.h  timer.cpp  window.cpp
